Remove old songlist formatting

--- a/DanceCalc/m4d/Views/Song/Merge.cshtml
+++ b/DanceCalc/m4d/Views/Song/Merge.cshtml
@@ -10,7 +10,7 @@
 {
     @Html.AntiForgeryToken()
 
-<table class="songlist">
+<table class="table table-striped">
     <tr>
         <th></th>
         @{int i = 0;}
