--- a/DanceCalc/m4d/Views/Song/SongItems.cshtml
+++ b/DanceCalc/m4d/Views/Song/SongItems.cshtml
@@ -2,19 +2,17 @@
 
 @if (User.IsInRole("showDiagnostics"))
 {
-    <table class="songlist">
+    <table class="table table-striped">
         <tr>
-            <th>Id</th>
             <th>Name</th>
             <th>Value</th>
         </tr>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@Html.DisplayFor(modelItem => item.Id)</td>
-            <td>@Html.DisplayFor(modelItem => item.Name)</td>
-            <td>@Html.DisplayFor(modelItem => item.Value)</td>
-        </tr>
-    }
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                <td>@Html.DisplayFor(modelItem => item.Value)</td>
+            </tr>
+        }
     </table>
 }
