--- a/DanceCalc/m4d/Views/SongProperty/Index.cshtml
+++ b/DanceCalc/m4d/Views/SongProperty/Index.cshtml
@@ -12,7 +12,7 @@
 
 @if (showDiag)
 {
-    <table class="songlist">
+    <table class="table table-striped">
         <tr>
             <th>Id</th>
             <th>Name</th>
