Quick fix for merge page

--- a/DanceCalc/m4d/Views/Song/SongItems.cshtml
+++ b/DanceCalc/m4d/Views/Song/SongItems.cshtml
@@ -10,8 +10,8 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                <td>@Html.DisplayFor(modelItem => item.Value)</td>
+                <td style="max-width: 100px">@Html.DisplayFor(modelItem => item.Name)</td>
+                <td style="max-width: 200px">@Html.DisplayFor(modelItem => item.Value)</td>
             </tr>
         }
     </table>
