Get InferDances working with editting

--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -19,7 +19,7 @@
 
     }
 
-    @Html.HiddenFor(model => model.SongId)
+    @Html.HiddenFor(m => m.SongId)
 
     <div class="form-group row">
         @Html.LabelFor(model => model.Title, new { @class = "control-label col-md-2" })
