Allow searching tag summary + a little cleanup

--- a/DanceCalc/m4d/Views/Admin/ReviewBatch.cshtml
+++ b/DanceCalc/m4d/Views/Admin/ReviewBatch.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<m4dModels.LocalMerger>
+﻿@using m4dModels
+@model IEnumerable<LocalMerger>
 
 @{
     ViewBag.Title = ViewBag.Name;
