--- a/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
@@ -1,6 +1,6 @@
 ﻿@using DanceLibrary
 @using m4dModels
-@model IEnumerable<m4dModels.SongBase>
+@model IEnumerable<SongBase>
 
 @{
     var isAdmin = User.IsInRole("dbAdmin");        
