--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -86,7 +86,7 @@
         <div class="col-xs-12">
             <div id="AdvancedSearch" class="input-group">
                 <div class="input-group">
-                    Include only song available on:
+                    Include only songs available on:
                     <label>
                         <input type="checkbox" name="services" id="serviceX" value="X" @checkX />
                         XBox
